# AndroidCamera

./: LICENSE  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zjxdev/tracker/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: nativedisplay.cpp  nativetracker.cpp
app/src/main/java/com/zjxdev/tracker/: AutoFitTextureView.java  CSRT.java  CameraBridge.java  JNIDisplay.java  MainActivity.java
app/src/main/jniLibs/include/: CSRTracker.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
app/src/main/rs/: yuv2rgba.rs
app/src/test/java/com/zjxdev/tracker/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
